set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
add_executable(phone main.cpp DBusObject.cpp Modem.cpp SIM.cpp Call.cpp Phone.cpp HapticFeedback.cpp RTPushButton.cpp PhoneKeyboard.cpp)
if(USE_LIBPHONENUMBER)
	set(PNLIB phonenumber)
endif()
target_link_libraries(phone Qt5Core Qt5DBus Qt5Gui Qt5Widgets ${PNLIB})
install(TARGETS phone DESTINATION bin)
configure_file(ch.lindev.phone.desktop.cmake ch.lindev.phone.desktop @ONLY)
configure_file(ch.lindev.phone.autostart.desktop.cmake ch.lindev.phone.autostart.desktop @ONLY)
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/ch.lindev.phone.desktop" DESTINATION share/applications)
set(XDG_CONFIG_DIR /etc/xdg CACHE PATH "XDG config directory")
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/ch.lindev.phone.autostart.desktop" DESTINATION ${XDG_CONFIG_DIR}/autostart)
install(FILES ch.lindev.phone.svg DESTINATION share/icons/hicolor/scalable/apps)
